<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.additional.ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/icon_contact"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/LamoonRegular"
            android:text="หากมีปัญหาด้านการใช้งาน"
            android:textSize="24sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/LamoonRegular"
            android:text="หรือต้องการติดต่อเรา"
            android:textSize="24sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/icon_mail">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/label_gmail"
            android:textAppearance="@style/LamoonRegular"
            android:textSize="18sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/icon_facebook">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/label_facebook"
            android:textAppearance="@style/LamoonRegular"
            android:textSize="18sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/icon_twitter">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/label_twitter"
            android:textAppearance="@style/LamoonRegular"
            android:textSize="18sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/icon_line">
        </ImageView>

        <TextView
            android:id="@+id/labelLine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/label_line"
            android:textAppearance="@style/LamoonRegular"
            android:textSize="18sp"></TextView>

    </LinearLayout>


</LinearLayout>